[#2541] Fix code issues according to PR comments, wrap ReactImageLightbox in the component Fullscreen to get a better consistency

--- a/frontend_app_gallery/src/css/index.styl
+++ b/frontend_app_gallery/src/css/index.styl
@@ -108,6 +108,7 @@
     width 100vw
     height 100vh
     position: fixed
+    z-index 31
     top 0
     left 0
 
